# legalage_logic

./: .gitignore  Cargo.toml  README.md
src/: android_api.rs  api.rs  common_api.rs  jni_api.rs  lib.rs  phone_api.rs  zk.rs
zokrates/: abi.json  check.sh  compile_circuit_and_make_setup.sh  legalage.zok  out  out.ztf  proving.key  verification.key
