[package]
name = "legalage_logic"
version = "0.1.0"
authors = ["Ladislav Sladecek <ladislav.sladecek@gmail.com>"]
edition = "2018"

[dependencies]
#zokrates_core = { git = "https://github.com/sladecek/ZoKrates.git" }
#zokrates_field = { git = "https://github.com/sladecek/ZoKrates.git" }
zokrates_core = { path = "../../fork/ZoKrates/zokrates_core" }
zokrates_field = { path = "../../fork/ZoKrates/zokrates_field" }
pairing = { version = "0.18"}
serde_json = "1.0"
bs58 = "0.3.1"
bellman_ce = { version = "^0.3", default-features = false }
hex = "0.4.2"
byteorder = "1.3.4"
mimc-rs = "0.0.2"
rand = "0.4"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17", default-features = false }

[lib]
crate-type = ["dylib"]